2014-12-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-table-dynamic): Add arg `switch-buffer'
	and change default to stay in the minibuffer when called from
	the minibuffer (bug#19250).
	(lazy-completion-table): Use this new argument to preserve the
	old behavior.

	* progmodes/elisp-mode.el (elisp--local-variables): Don't burp on
	incorrect lexical elements (bug#19250).

2014-12-03  Eric S. Raymond  <esr@snark.thyrsus.com>

	* files.el (file-tree-walk): Lisp translation of ANSI ftw(3).

2014-12-02  Glenn Morris  <rgm@gnu.org>

	* whitespace.el (whitespace-big-indent-regexp): Add :version.

2014-12-02  Eric S. Raymond  <esr@snark.thyrsus.com>

	* subr.el (filter): New macro. Because it's just silly for a Lisp
	not to have this in 2014.  And VC needs it.

	* vc.el, all backends: API simplification: Abolish dir-status.
	It's replaced by dir-status-files.

	* vc.el, all backends: API simplification: Remove 4th
	'default-state' argument from vc-dir-status files and its backend
	methods - no backend method ever set it.  It was used only in the
	fallback method to to set a default of 'up-to-date, though a
	convoluted call chain obscured this.

	* vc-hooks.el: Bind vc-delete-file to Ctrl-x v delete.

	* vc.el (vc-expand-dirs): Now takes a second BACKEND argument,
	improving behavior on directories using multiple file-oriented VCSes.

	* vc/vc.el and all backends: API simplification; clear-headers
	is no longer a public method.  It is now local to the one place
	it's used, in the RCS steal-lock method.

2014-12-01  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc/vc.el and all backends: API simplification; could-register
	is no longer a public method.  (vc-cvs.el still has a private
	implementation.)

	* vc/vc.el and all backends: API cleanup; the backend diff method
	takes an explicit async flag.  This eliminates a particularly ugly
	global.

	* vc-bzr.el: Restore vc-bzr-state-heuristic as a private method.